--- a/index.html
+++ b/index.html
@@ -1,34 +1,86 @@
 <!DOCTYPE html>
 <html lang="fa">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>فرم ثبت نام</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>رزومه</title>
     <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div class="container">
-      <div class="login__form">
-        <div class="login__form__img">
-          <img src="backleft.avif" alt=""/>
+</head>
+<body>
+    <div class="header">
+        <div class="header_pic">
+            <img class="pic" src="image-new.jpg" alt="تصویر بارگیری نشد">
         </div>
-        <div class="login__form__right">
-          <h1>ثبت نام در سایت</h1>
-          <form action="">
-            <label for="input-email">ایمیل</label>
-            <input type="email" id="input-email" name="input_email" placeholder="Enter Email">
-            <label for="input-user">نام کاربری</label>
-            <input type="text" id="input-user" name="input_user" placeholder="Enter Username">
-            <label for="input-pass">رمز عبور</label>
-            <input type="password" id="input-pass" placeholder="Enter Password"/>
-            <button class="login-btn"><b>ثبت نام</b></button>
-          </form>
-          <p class="txt">حساب کاربری دارید؟ <a class="lnj" href="#">وارد شوید</a></p>
+        <div class="header_left">
+            <div class="header_word">
+                <h1 class="header_word_titr">علی نورعلیان</h1>
+                <br>
+                <ul class="header_word_ul">
+                    <li><b>متولد:</b> 1385/12/14</li>
+                    <br>
+                    <li><b>وضعیت تاهل:</b> زشته</li>
+                    <br>
+                    <li><b>وضعیت نظام وظیفه :</b> سلام</li>
+                    <br>
+                    <li><b>ملیت:</b> ایران</li>
+                </ul>
+            </div>
         </div>
-      </div>
-      
-      <p class="ckr">&copy;ساخته شده توسط <a class="lnk" href="https://web.telegram.org/k/#@a_noo_r"><b>علی نورعلیان</b></a></p>
     </div>
-  </body>
+    <div class="main">
+        <div class="main_right">
+            <div class="about_me">
+                <h3 class="main_titr">درباره من</h3>
+                <p class="main_p">
+                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد. لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است.
+                </p>
+            </div>
+            <div class="ertebat">
+                <h3 class="main_titr">ارتباط با من</h3>
+                <h4 class="er_titr">ایران،تهران،چهاراه لشگر</h4>
+                <ul class="er_ul">
+                    <li><b>ایمیل:</b> alinooralian.85@gmail.com</li>
+                    <li><b>وب سایت:</b> alinooralian.github.io</li>
+                    <li><b>شماره تماس:</b> +989129997575</li>
+                </ul>
+            </div>
+        </div>
+        <div class="main_left">
+            <div class="shoql">
+                <h3 class="main_titr">سابقه شغلی</h3>
+                <p class="sh_p">همکاری با شرکت رسن از سال 99 الی 1401 جهت طراحی وبسایت و طراحی سه سایت برای این شرکت:</p>
+                <br>
+                <ul class="sh_ul">
+                    <li><b>مازندران من:</b> خرید، فروش، رهن و اجاره ملک و زمین در مازندران</li>
+                    <br>
+                    <li><b>فلوراید:</b> سایت دندانپزشکی زنجیره ای فلوراید</li>
+                    <br>
+                    <li><b>رسن:</b> سایت اصلی شرکت رسن</li>
+                </ul>
+            </div>
+            <div class="tahsil">
+                <h3 class="main_titr">سابقه تحصیلی</h3>
+                <ul class="th_ul">
+                    <li>تحصیل در مقطع دبیرستان دوره اول و دوم در مدارس سمپاد</li>
+                    <li>کسب رتبه کشوری در ورکشاپ لیزر و کوانتوم</li>
+                    <li>کسب رتبه برتر کشوری در دوره پی در پی جشنواره علمی و فرهنگی</li>
+                    <li>کسب رتبه استانی در جشنواره خوارزمی</li>
+                    <li>کسب رتبه استانی در جشنواره جابر بن حیان</li>
+                </ul>
+            </div>
+            <div class="ability">
+                <h3 class="main_titr">مهارت ها</h3>
+                <ul class="ab_ul">
+                    <li>تسلط به زبان برنامه نویس c++</li>
+                    <li>تسلط به الگوریتم های مبانی تا دوره المپیاد کامپیوتر</li>
+                    <li>تسلط به B4A</li>
+                    <li>طراحی سایت به وسیله WordPress و HTML و CSS</li>
+                    <li>Produce, Mix and Master</li>
+                    <li>نقشه کشی ساختمانی دوبعدی</li>
+                    <li>انمیشین سازی سه بعدی و تدوین</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
